# dockertags

./: README.md  pyproject.toml  requirements.txt  tox.ini
src/dockerhubtags/: cli.py
src/dockertags/: cli.py
