[tool.poetry]
name = "dockerhubtags"
version = "0.1.0"
description = ""
authors = ["yolabingo <yolabingo@gmail.com>"]
readme = "README.md"
packages = [{include = "dockerhubtags", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.scripts]
dockertags = "dockerhubtags.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
