[tool.poetry]
name = "dockertags"
version = "0.1.0"
description = ""
authors = ["yolabingo <yolabingo@gmail.com>"]
readme = "README.md"
packages = [{include = "dockertags", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8, < 3.11"
requests = "^2.28.1"

[tool.poetry.scripts]
dockertags = "dockertags.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
tox = "^3.26.0"
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
